--- a/regpage.html
+++ b/regpage.html
@@ -48,7 +48,7 @@
             const fname = event.target.fname.value;
             const lname = event.target.lname.value;
             const email = event.target.email.value;
-            const TOC = event.target.date.value;
+            const TOC = event.target.date.value; 
             const time = event.target.time.value;
             localStorage.setItem('fname',name);
             localStorage.setItem('lname',lname);
@@ -57,7 +57,10 @@
             localStorage.setItem('time',time);
 
         }
-   
+        let myObj_serialized = JSON.stringify(saveToLocalStorage);
+        localStorage.setItem("saveToLocalStorage",myObj_serialized);
+        let myObj_deserialized = JSON.parse(localStorage.getItem("saveToLocalStorage"));
+        console.log(myObj_deserialized);
        </script>
 
     </div>
