https://github.com/Sukamal1999/registration_page

--- a/regpage.html
+++ b/regpage.html
@@ -41,7 +41,10 @@
         <input type="submit" value="Get a call" 
          id="submit">
 
-        </form>
+        </form
+        <ul id="ListOfItem">
+            
+        </ul>
        <script>
         function saveToLocalStorage(event){
             event.preventDefault();
